Fix a lot issues. make a worker version